
# Gather nc data example
set(EXAMPLE_CMC_NETCDF_BIN_DIR ${CMAKE_INSTALL_BINDIR}/netcdf)
set(EXAMPLE_NETCDF_CMC_GATHER_NC_DATA cmc_gather_nc_data)
add_executable(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} ${CMAKE_CURRENT_LIST_DIR}/netcdf/cmc_gather_nc_data.cxx)
target_link_libraries(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PUBLIC cmc)
target_include_directories(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_NETCDF_BIN_DIR}")
install(TARGETS ${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} DESTINATION ${CMAKE_INSTALL_BINDIR}/netcdf)
