
# Gather nc data example
set(EXAMPLE_CMC_NETCDF_BIN_DIR ${CMAKE_INSTALL_BINDIR}/netcdf)
set(EXAMPLE_NETCDF_CMC_GATHER_NC_DATA cmc_gather_nc_data)
add_executable(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} ${CMAKE_CURRENT_LIST_DIR}/netcdf/cmc_gather_nc_data.cxx)
target_link_libraries(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PUBLIC cmc)
target_include_directories(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_NETCDF_BIN_DIR}")
install(TARGETS ${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} DESTINATION ${EXAMPLE_CMC_NETCDF_BIN_DIR})

# Example for construction of a mesh and artifical data to compress
set(EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION cmc_t8_construct_mesh_and_data_for_compression)
add_executable(${EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/cmc_t8_construct_mesh_and_data_for_compression.cxx)
target_link_libraries(${EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION} PUBLIC cmc )
target_include_directories(${EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
install(TARGETS ${EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION} DESTINATION ${CMAKE_INSTALL_BINDIR})

# Lossless Embedded Prefix Compression example
set(EXAMPLE_CMC_LOSSLESS_DIR ${CMAKE_INSTALL_BINDIR}/lossless)
set(EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION cmc_embedded_prefix_compression)
add_executable(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossless/cmc_embedded_prefix_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSLESS_DIR}")
install(TARGETS ${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSLESS_DIR})

# Lossless Embedded Multi Res Compression example
set(EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION cmc_embedded_multi_res_compression)
add_executable(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossless/cmc_embedded_multi_res_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSLESS_DIR}")
install(TARGETS ${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSLESS_DIR})

# Lossless Embedded PCP4 Multi Res Compression example
set(EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION cmc_embedded_pcp4_multi_res_compression)
add_executable(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossless/cmc_embedded_pcp4_multi_res_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSLESS_DIR}")
install(TARGETS ${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSLESS_DIR})

# Example for comparison of binary files
set(EXAMPLE_COMPARE_BIN_DATA_OUTPUT cmc_compare_bin_data_output)
add_executable(${EXAMPLE_COMPARE_BIN_DATA_OUTPUT} ${CMAKE_CURRENT_LIST_DIR}/cmc_compare_bin_data_output.cxx)
target_link_libraries(${EXAMPLE_COMPARE_BIN_DATA_OUTPUT} PUBLIC cmc )
target_include_directories(${EXAMPLE_COMPARE_BIN_DATA_OUTPUT} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
install(TARGETS ${EXAMPLE_COMPARE_BIN_DATA_OUTPUT} DESTINATION ${CMAKE_INSTALL_BINDIR})

