set(EXAMPLE_CMC_LOSSLESS_DIR ${CMAKE_INSTALL_BINDIR}/lossless)
set(EXAMPLE_CMC_LOSSY_DIR ${CMAKE_INSTALL_BINDIR}/lossy)
set(EXAMPLE_CMC_NETCDF_BIN_DIR ${CMAKE_INSTALL_BINDIR}/netcdf)

# Gather nc data example
set(EXAMPLE_NETCDF_CMC_GATHER_NC_DATA cmc_gather_nc_data)
add_executable(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} ${CMAKE_CURRENT_LIST_DIR}/netcdf/cmc_gather_nc_data.cxx)
target_link_libraries(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PUBLIC cmc)
target_include_directories(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_NETCDF_BIN_DIR}")
install(TARGETS ${EXAMPLE_NETCDF_CMC_GATHER_NC_DATA} DESTINATION ${EXAMPLE_CMC_NETCDF_BIN_DIR})

if (CMC_WITH_T8CODE)
# If configured wit t8code

# Example for construction of a mesh and artifical data to compress
set(EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION cmc_t8_construct_mesh_and_data_for_compression)
add_executable(${EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/cmc_t8_construct_mesh_and_data_for_compression.cxx)
target_link_libraries(${EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION} PUBLIC cmc )
target_include_directories(${EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
install(TARGETS ${EXAMPLE_CONSTRUCT_MESH_AND_DATA_FOR_COMPRESSION} DESTINATION ${CMAKE_INSTALL_BINDIR})

# Lossless Embedded Prefix Compression example
set(EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION cmc_embedded_prefix_compression)
add_executable(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossless/cmc_embedded_prefix_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSLESS_DIR}")
install(TARGETS ${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PREFIX_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSLESS_DIR})

# Lossless Embedded Multi Res Compression example
set(EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION cmc_embedded_multi_res_compression)
add_executable(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossless/cmc_embedded_multi_res_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSLESS_DIR}")
install(TARGETS ${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSLESS_DIR})

# Lossless Embedded PCP4 Multi Res Compression example
set(EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION cmc_embedded_pcp4_multi_res_compression)
add_executable(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossless/cmc_embedded_pcp4_multi_res_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSLESS_DIR}")
install(TARGETS ${EXAMPLE_LOSSLESS_CMC_EMBEDDED_PCP4_MULTI_RES_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSLESS_DIR})

set(EXAMPLE_TEST_LORENZO_PREDICTION cmc_test_lorenzo_prediction)
add_executable(${EXAMPLE_TEST_LORENZO_PREDICTION} ${CMAKE_CURRENT_LIST_DIR}/cmc_test_lorenzo_prediction.cxx)
target_link_libraries(${EXAMPLE_TEST_LORENZO_PREDICTION} PUBLIC cmc )
target_include_directories(${EXAMPLE_TEST_LORENZO_PREDICTION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
install(TARGETS ${EXAMPLE_TEST_LORENZO_PREDICTION} DESTINATION ${CMAKE_INSTALL_BINDIR})

# Lossy MuliRes Compression example
set(EXAMPLE_LOSSY_CMC_TRIMMED_MULTI_RES_COMPRESSION cmc_trimmed_multi_res_compression)
add_executable(${EXAMPLE_LOSSY_CMC_TRIMMED_MULTI_RES_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossy/cmc_trimmed_multi_res_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSY_CMC_TRIMMED_MULTI_RES_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSY_CMC_TRIMMED_MULTI_RES_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSY_CMC_TRIMMED_MULTI_RES_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSY_DIR}")
install(TARGETS ${EXAMPLE_LOSSY_CMC_TRIMMED_MULTI_RES_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSY_DIR})

set(EXAMPLE_LOSSY_CMC_QUANTIZED_PREFIX_COMPRESSION cmc_quantized_prefix_compression)
add_executable(${EXAMPLE_LOSSY_CMC_QUANTIZED_PREFIX_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossy/cmc_quantized_prefix_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSY_CMC_QUANTIZED_PREFIX_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSY_CMC_QUANTIZED_PREFIX_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSY_CMC_QUANTIZED_PREFIX_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSY_DIR}")
install(TARGETS ${EXAMPLE_LOSSY_CMC_QUANTIZED_PREFIX_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSY_DIR})

# Lossy MultiRes Compression with extended recosntruction
set(EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION cmc_embedded_lossy_multi_res_ext_reconstruction_compression)
add_executable(${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossy/cmc_multi_res_ext_reconstruction_variable.cxx)
target_link_libraries(${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSY_DIR}")
install(TARGETS ${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSY_DIR})

# Lossy MultiRes Compression for testing variations
set(EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_TEST_VARIATIONS_COMPRESSION cmc_embedded_lossy_multi_res_test_variations_compression)
add_executable(${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_TEST_VARIATIONS_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossy/cmc_multi_res_test_variations.cxx)
target_link_libraries(${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_TEST_VARIATIONS_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_TEST_VARIATIONS_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_TEST_VARIATIONS_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSY_DIR}")
install(TARGETS ${EXAMPLE_LOSSY_CMC_EMBEDDED_MULTI_TEST_VARIATIONS_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSY_DIR})


#End if not configured with t8code
endif()

# Lossless Patch Based Compression example
set(EXAMPLE_LOSSLESS_CMC_PATCH_COMPRESSION cmc_patch_compression)
add_executable(${EXAMPLE_LOSSLESS_CMC_PATCH_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossless/cmc_patch_compression.cxx)
target_link_libraries(${EXAMPLE_LOSSLESS_CMC_PATCH_COMPRESSION} PUBLIC cmc)
target_include_directories(${EXAMPLE_LOSSLESS_CMC_PATCH_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(${EXAMPLE_LOSSLESS_CMC_PATCH_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSLESS_DIR}")
install(TARGETS ${EXAMPLE_LOSSLESS_CMC_PATCH_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSLESS_DIR})

# Lossless Embedded Multi Res Compression with extended reconstruction
#set(EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION cmc_embedded_multi_res_ext_reconstruction_compression)
#add_executable(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} ${CMAKE_CURRENT_LIST_DIR}/lossless/cmc_embedded_multi_res_ext_reconstruction_compression.cxx)
#target_link_libraries(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} PUBLIC cmc)
#target_include_directories(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
#set_target_properties(${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${EXAMPLE_CMC_LOSSLESS_DIR}")
#install(TARGETS ${EXAMPLE_LOSSLESS_CMC_EMBEDDED_MULTI_RES_EXT_COMPRESSION} DESTINATION ${EXAMPLE_CMC_LOSSLESS_DIR})


# Example for comparison of binary files
set(EXAMPLE_COMPARE_BIN_DATA_OUTPUT cmc_compare_bin_data_output)
add_executable(${EXAMPLE_COMPARE_BIN_DATA_OUTPUT} ${CMAKE_CURRENT_LIST_DIR}/cmc_compare_bin_data_output.cxx)
target_link_libraries(${EXAMPLE_COMPARE_BIN_DATA_OUTPUT} PUBLIC cmc )
target_include_directories(${EXAMPLE_COMPARE_BIN_DATA_OUTPUT} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
install(TARGETS ${EXAMPLE_COMPARE_BIN_DATA_OUTPUT} DESTINATION ${CMAKE_INSTALL_BINDIR})

# Example for comparison of lossy compression output
set(EXAMPLE_COMPARE_LOSSY_COMPRESSION_OUTPUT cmc_compare_lossy_compression_output)
add_executable(${EXAMPLE_COMPARE_LOSSY_COMPRESSION_OUTPUT} ${CMAKE_CURRENT_LIST_DIR}/cmc_compare_lossy_compression_output.cxx)
target_link_libraries(${EXAMPLE_COMPARE_LOSSY_COMPRESSION_OUTPUT} PUBLIC cmc )
target_include_directories(${EXAMPLE_COMPARE_LOSSY_COMPRESSION_OUTPUT} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
install(TARGETS ${EXAMPLE_COMPARE_LOSSY_COMPRESSION_OUTPUT} DESTINATION ${CMAKE_INSTALL_BINDIR})
