bin_PROGRAMS += example/netcdf/cmc_gather_nc_data \
example/lossy/cmc_amr_lossy_compression \
example/lossy/cmc_prefix_lossy_compression \
example/lossy/cmc_amr_lossy_different_mesh \
example/lossy/cmc_amr_compression \
example/lossless/cmc_lossless_prefix_compression \
example/lossless/cmc_lossless_diff_compression \
example/lossy/cmc_lossy_prefix_compression \
example/lossy/cmc_amr_patch_compression \
example/lossy/cmc_lossy_full_amr_compression \
example/cmc_compare_bin_data_output

example_netcdf_cmc_gather_nc_data_SOURCES =  example/netcdf/cmc_gather_nc_data.cxx

example_lossy_cmc_amr_lossy_compression_SOURCES = example/lossy/cmc_amr_lossy_compression.cxx 

example_lossy_cmc_prefix_lossy_compression_SOURCES = example/lossy/cmc_prefix_lossy_compression.cxx

example_lossy_cmc_amr_lossy_different_mesh_SOURCES = example/lossy/cmc_amr_lossy_different_mesh.cxx

example_lossless_cmc_lossless_prefix_compression_SOURCES = example/lossless/cmc_lossless_prefix_compression.cxx

example_lossless_cmc_lossless_diff_compression_SOURCES = example/lossless/cmc_lossless_diff_compression.cxx

example_lossy_cmc_amr_compression_SOURCES = example/lossy/cmc_amr_compression.cxx

example_lossy_cmc_amr_patch_compression_SOURCES = example/lossy/cmc_amr_patch_compression.cxx

example_lossy_cmc_lossy_prefix_compression_SOURCES = example/lossy/cmc_lossy_prefix_compression.cxx

example_lossy_cmc_lossy_full_amr_compression_SOURCES = example/lossy/cmc_lossy_full_amr_compression.cxx

example_cmc_compare_bin_data_output_SOURCES = example/cmc_compare_bin_data_output.cxx

if ENABLE_FORTRAN
bin_PROGRAMS += example/lossy_amr_nc_compression/cmc_fortran_lossy_amr_compression
example_lossy_amr_nc_compression_cmc_fortran_lossy_amr_compression_SOURCES = example/lossy_amr_nc_compression/cmc_fortran_lossy_amr_compression.f90
endif
